--- a/portfolio4.html
+++ b/portfolio4.html
@@ -95,7 +95,8 @@
               </p>
               <p>
                 My tasks included creating product listing prototypes, setting up web structures, debugging layouts, and adapting pages based on design mockups.
-                I also learned to follow structured development workflows, perform testing, and collaborate with team members to meet project deadlines.
+                I also helped in developing a simple quiz platform, working on both the interface and question management logic to support dynamic content updates.
+                Throughout the projects, I followed structured workflows, performed testing, and collaborated with team members to meet project deadlines.
               </p>
               <p>
                 These experiences strengthened my technical understanding, teamwork, and ability to develop functional, responsive, and user-friendly web applications.
