--- a/portfolio3.html
+++ b/portfolio3.html
@@ -127,9 +127,9 @@
       <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
         <h2>Venue Reservation System</h2>
         <p>
-          Developed a basic web application that allows users to view and reserve available venues. 
-          The system includes features for booking management, user authentication, and database integration using PHP and MySQL. 
-          Designed a responsive front-end with HTML, CSS, and JavaScript to provide a simple and user-friendly experience for both users and administrators.
+          I worked with one teammate to develop a basic web application that lets users view and reserve available venues.
+          I was responsible for the backend development, including the booking management system, user authentication, and database integration using PHP and MySQL.
+          My teammate handled the front-end design using HTML, CSS, and JavaScript to create a responsive and user-friendly interface.
         </p>
       </div>
     </div>
