--- a/portfolio3.html
+++ b/portfolio3.html
@@ -127,7 +127,7 @@
       <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
         <h2>Venue Reservation System</h2>
         <p>
-          I worked with one teammate to develop a basic web application that lets users view and reserve available venues.
+          Worked in a team of two to develop a basic web application that allows users to view and reserve available venues.
           I was responsible for the backend development, including the booking management system, user authentication, and database integration using PHP and MySQL.
           My teammate handled the front-end design using HTML, CSS, and JavaScript to create a responsive and user-friendly interface.
         </p>
